--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <div class="tokyo_tm_mobile_menu">
 <div class="menu_inner">
 <div class="logo">
-<img src="img/logo/dark.png" alt="" />
+<img src="" alt="" />
 </div>
 <div class="menu">
 <ul>
